<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleMapsApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">SETTINGS</string>
    <string name="pref_ipaddress_1">Aircraft 1: IP Address</string>
    <string name="pref_portTCP_1">Aircraft 1: TCP Port connection</string>
    <string name="pref_portUDP_1">Aircraft 1: Port for UDP connection</string>
    <string name="pref_ipaddress_2">Aircraft 2: IP Address</string>
    <string name="pref_portTCP_2">Aircraft 2: TCP Port connection</string>
    <string name="pref_portUDP_2">Aircraft 2: Port for UDP connection</string>

</resources>
